--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <header>
-    <img src="file:///C:/Users/Student/Desktop/My%20first%20webpage/804Thread%20Logo.png" alt="804Thread Logo">
+    <img src="Logo.jpg" alt="804Thread Logo">
 </header>
 
 
