--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <nav>
         <a href="home.html">Home</a>
-        <a href="aboutus.html">About Us</a>
+        <a href="about.html">About Us</a>
         <a href="services.html">Shop</a>
         <a href="contact.html">Contact</a>
     </nav>
