--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <header>
-    <img src="Logo.jpg" alt="804Thread Logo">
+    <img src="804Thread Logo.png" alt="804Thread Logo">
 </header>
 
 
