--- a/index.html
+++ b/index.html
@@ -1,30 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>804Thread - Skatewear Brand</title>
-    <link rel="stylesheet" href="Homepage.css">  
-	<title>Contact Us - 804Thread</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home | 804Thread</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <header>
-    <img src="804Thread Logo.png" alt="804Thread Logo">
-</header>
+    <!-- Header (Navigation) -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="shop.html">Shop</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <!-- Main Content -->
+    <section>
+        <h1>Welcome to 804Thread</h1>
+    </section>
 
-    <nav>
-        <a href="About Us.html">About Us</a>
-        <a href="Shop.html">Shop</a>
-        <a href="Contact Page.html">Contact</a>
-    </nav>
-
-    <main>
-        <h1>Weave Your Own Path</h1>
-        <p>Explore our latest collections!</p>
-    </main>
-
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2024 804Thread. All rights reserved.</p>
+        <p>&copy; 2024 804Thread. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
+
