--- a/Shop.html
+++ b/Shop.html
@@ -12,47 +12,17 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="About Us.html">About Us</a></li>
-                <li><a href="Contact Page.html">Contact</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="shop.html" class="active">Shop</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <!-- Shop Page -->
-    <section class="shop">
-        <h1>Our Collection</h1>
-
-        <!-- Product Grid -->
-        <div class="product-grid">
-            <!-- Product 1 -->
-            <div class="product-card">
-<div class="product-info">
-        <h2>Baggy Jeans</h2>
-                    <p class="price">$55.00</p>
-                    <a href="#" class="btn">View Details</a>
-              </div>
-          </div>
-
-            <!-- Product 2 -->
-            <div class="product-card">
-<div class="product-info">
-        <h2>Beanie Hat</h2>
-                    <p class="price">$10.00</p>
-                    <a href="#" class="btn">View Details</a>
-              </div>
-          </div>
-
-            <!-- Product 3 -->
-            <div class="product-card">
-<div class="product-info">
-        <h2>Graphic T-Shirt</h2>
-                    <p class="price">$35.00</p>
-                    <a href="#" class="btn">View Details</a>
-              </div>
-          </div>
-
-            <!-- More Products can be added in the same structure -->
-        </div>
+    <!-- Main Content -->
+    <section>
+        <h1>Shop Our Collection</h1>
+        <p>Browse our latest collection of streetwear...</p>
     </section>
 
     <!-- Footer -->
@@ -61,4 +31,3 @@
     </footer>
 </body>
 </html>
-
