--- a/Contact Page.html
+++ b/Contact Page.html
@@ -3,50 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>804Thread - Skatewear Brand</title>
+    <title>Contact | 804Thread</title>
     <link rel="stylesheet" href="style.css">
-	<title>Contact Us | 804Thread</title>
 </head>
-	
-	  <nav>
-        <a href="About Us.html">About Us</a>
-        <a href="Shop.html">Shop</a>
-        <a href="index.html">Home</a>
-    </nav>
-	
 <body>
+    <!-- Header (Navigation) -->
     <header>
-        <h1>Contact 804Thread</h1>
-        <p>We'd love to hear from you! Reach out with any questions, feedback, or collaborations.</p>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="shop.html">Shop</a></li>
+                <li><a href="contact.html" class="active">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <main>
-        <section class="contact-info">
-            <h2>Contact Information</h2>
-            <p>Email: <a href="mailto:support@804thread.com">support@804thread.com</a></p>
-            <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p>
-            <p>Address: 1234 Arthurashe Blvd, Richmond, VA 23220</p>
-        </section>
+    <!-- Main Content -->
+    <section>
+        <h1>Contact Us</h1>
+        <p>Get in touch with us...</p>
+    </section>
 
-        <section class="contact-form">
-            <h2>Send Us a Message</h2>
-            <form action="submit_form.php" method="post">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="5" required></textarea>
-
-                <button type="submit">Send Message</button>
-            </form>
-        </section>
-    </main>
-
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2024 804Thread. All rights reserved.</p>
+        <p>&copy; 2024 804Thread. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
