--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>804Thread - Skatewear Brand</title>
-	<title>Contact Us - 804Thread</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>804Thread</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
    <header>
