--- a/index.html
+++ b/index.html
@@ -1,33 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>804Thread</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home - 804Thread</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <header>
-    <img src="804Thread Logo.png" alt="804Thread Logo">
-</header>
+  <header>
+    <img src="804Thread Logo.png" alt="804Thread Logo" class="logo logo-spin">
+  </header>
 
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="shop.html">Shop</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
 
-   <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About Us</a>
-                <li><a href="shop.html">Shop</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul
-        </nav>
+  <main>
+    <h1 class="center-text">Weave Your Own Path</h1>
+  </main>
 
-    <main>
-        <h1>Weave Your Own Path</h1>
-        <p>Explore our latest collections!</p>
-    </main>
-
-    <footer>
-        <p>&copy; 2024 804Thread. All rights reserved.</p>
-    </footer>
+  <footer>
+    <p>&copy; 2024 804Thread. All rights reserved.</p>
+  </footer>
 </body>
 </html>
