--- a/shop.html
+++ b/shop.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="804Thread Logo.png" alt="804Thread Logo" class="logo-spin">
+    <img src="804Thread Logo.png" alt="804Thread Logo" class="logo logo-spin">
   </header>
 
   <nav>
