--- a/about.html
+++ b/about.html
@@ -7,14 +7,14 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<header>
-         <nav>
+    <header>
+        <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About Us</a>
+                <li><a href="about.html">About Us</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="contact.html">Contact</a></li>
-            </ul
+            </ul>
         </nav>
     </header>
 
@@ -23,11 +23,11 @@
         <p>804Thread is a streetwear brand inspired by skate culture and the Richmond, VA community. Our designs are meant to represent the lifestyle of skaters, creatives, and anyone who thrives in the urban environment. We believe in expressing individuality through style, comfort, and quality.</p>
         <p>Our mission is to bring bold, unique pieces to the world of skatewear while staying true to the roots of street culture. From baggy jeans to beanies, we’re all about mixing comfort with style.</p>
         <h2>Our Story</h2>
-        <p>Started in Richmond, VA, 804Thread is a brand built by a   skater with a passion for fashion. What started as an idea is now real and every order is packed with pride and love.&nbsp;&nbsp;</p>
+        <p>Started in Richmond, VA, 804Thread is a brand built by a skater with a passion for fashion. What started as an idea is now real and every order is packed with pride and love.</p>
     </section>
 
     <footer>
-      <p>&copy; 2024 804Thread. All rights reserved.</p>
-</footer>
+        <p>&copy; 2024 804Thread. All rights reserved.</p>
+    </footer>
 </body>
 </html>
