--- a/shop.html
+++ b/shop.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Shop - 804Thread</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <img src="804Thread Logo.png" alt="804Thread Logo" class="logo logo-spin">
+    <img src="804thread-logo.png" alt="804Thread Logo" class="logo logo-spin" />
   </header>
 
   <nav>
@@ -21,25 +21,19 @@
   </nav>
 
   <main>
-    <h1>Shop 804Thread</h1>
-    <div class="product-grid">
+    <h1 class="center-text">Shop 804Thread</h1>
+    <section class="product-grid">
       <div class="product">
-        <img src="804 Deck.png" alt="804 Skate Deck">
+        <img src="804-deck.png" alt="804 Skate Deck" />
         <h2>804 Skate Deck</h2>
       </div>
       <div class="product">
-        <img src="long sleeve 804.png" alt="804 Long Sleeve">
+        <img src="804-longsleeve.png" alt="804 Long Sleeve" />
         <h2>804 Long Sleeve</h2>
       </div>
       <div class="product">
-        <img src="804 Beanie.png" alt="804 Beanie">
+        <img src="804-beanie.png" alt="804 Beanie" />
         <h2>804 Beanie</h2>
       </div>
-    </div>
+    </section>
   </main>
-
-  <footer>
-    <p>&copy; 2024 804Thread. All rights reserved.</p>
-  </footer>
-</body>
-</html>
