--- a/shop.html
+++ b/shop.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="804thread-logo.png" alt="804Thread Logo" class="logo logo-spin" />
+    <img src="804Thread Logo.png" alt="804Thread Logo" class="logo logo-spin" />
   </header>
 
   <nav>
@@ -24,15 +24,15 @@
     <h1 class="center-text">Shop 804Thread</h1>
     <section class="product-grid">
       <div class="product">
-        <img src="804-deck.png" alt="804 Skate Deck" />
+        <img src="Screenshot (184).png" alt="804 Skate Deck" />
         <h2>804 Skate Deck</h2>
       </div>
       <div class="product">
-        <img src="804-longsleeve.png" alt="804 Long Sleeve" />
+        <img src="Screenshot (182).png" alt="804 Long Sleeve" />
         <h2>804 Long Sleeve</h2>
       </div>
       <div class="product">
-        <img src="804-beanie.png" alt="804 Beanie" />
+        <img src="Screenshot (181).png" alt="804 Beanie" />
         <h2>804 Beanie</h2>
       </div>
     </section>
