--- a/about.html
+++ b/about.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <header>
+         <header>
+    <img src="804Thread Logo.png" alt="804Thread Logo" class="logo logo-spin">
+  </header>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
