--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 	<title>Contact Us | 804Thread</title>
 </head>
+	 <header>
+    <img src="804Thread Logo.png" alt="804Thread Logo" class="logo logo-spin">
+  </header>
 	 <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
